--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -63,6 +63,16 @@ body {
   width: 100%;
 }
 
+.loading {
+  //height: 100%;
+  //width: 100%;
+  position: fixed;
+  left: 5px;
+  top: 5px;
+  height: 20px;
+  width: 20px;
+}
+
 @media screen and (max-width: 1000px) {
   #main {
     width: 100% !important;
