update :: 调整移动端按钮样式

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -183,6 +183,8 @@ body {
     padding: 15px;
     z-index: 99;
     margin: 0 !important;
+    width: 50%;
+    border: solid;
   }
 
   .righttab {
@@ -193,6 +195,8 @@ body {
     padding: 15px;
     z-index: 99;
     margin: 0 !important;
+    width: 50%;
+    border: solid;
   }
 
   .readbtn {
@@ -212,13 +216,13 @@ body {
   margin: 5px;
   position: fixed;
   left: 50px;
-  z-index: 99
+  z-index: 99;
 }
 
 .righttab {
   position: fixed;
   right: 50px;
-  z-index: 99
+  z-index: 99;
 }
 
 .readbtn {
