--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -12,6 +12,7 @@
   font-family: 'nei';
   src: url('https://cdn.lvcshu.info/font/nei.woff');
 }
+
 :root {
   --text: #333;
 }
@@ -133,6 +134,11 @@ body {
   border-color: #42b983;
 }
 
+.tab {
+  border-bottom: solid;
+  border-color: rgba(0, 0, 0, 0);
+}
+
 #postcontext {
   text-align: initial;
   padding: 30px;
@@ -191,6 +197,10 @@ body {
 
   .postdate {
     display: none;
+  }
+
+  #topnav a {
+    float: none !important;
   }
 
   .lefttab {
