update :: 更新 CSS

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -144,12 +144,8 @@ body {
   padding: 30px;
 }
 
-#postcontext figure {
-  width: 100% !important;
-}
-
-#postcontext img {
-  width: 100%;
+#postcontext * {
+  max-width: 100% !important;
 }
 
 #postcontext p {
