update :: 添加未读文章为0提示 :: 修改未读计数逻辑 :: 添加翻译

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -148,6 +148,12 @@ body {
   max-width: 100% !important;
 }
 
+span#nopost {
+  position: sticky;
+  top: 50%;
+  width: 100%;
+}
+
 #postcontext p {
   font-size: 20px;
   line-height: 36px;
