update :: 更新设置页面 :: 导航栏部分内容迁移到设置页面

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -27,6 +27,10 @@ body {
   color: var(--color-text);
 }
 
+.setting {
+  text-align: left;
+  padding: 20px;
+}
 
 .title {
   font-family: 'nei', 'schnyder', Times, serif;
@@ -148,7 +152,7 @@ body {
   max-width: 100% !important;
 }
 
-span#empty {
+.empty {
   position: sticky;
   top: 50%;
   width: 100%;
