update :: 修改样式 :: 新增缓存统计 :: 修改缓存逻辑

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -29,7 +29,7 @@ body {
 
 .setting {
   text-align: left;
-  padding: 20px;
+  padding: 15px 20px;
 }
 
 .title {
@@ -168,8 +168,6 @@ body {
 }
 
 .loading {
-  //height: 100%;
-  //width: 100%;
   position: fixed;
   left: 5px;
   top: 5px;
