--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -97,6 +97,9 @@ body {
   padding: 5px;
   padding-left: 15px !important;
   transition: 0.08s;
+  border-bottom: solid;
+  border-color: rgb(0 0 0 / 10%);
+  border-bottom-width: thin;
 }
 
 .post:hover {
