update :: 调整显示效果

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -98,7 +98,7 @@ body {
   padding-left: 15px !important;
   transition: 0.08s;
   border-bottom: solid;
-  border-color: rgb(0 0 0 / 10%);
+  border-color: rgba(0,0,0,.05);
   border-bottom-width: thin;
 }
 
