update :: 修改选中高亮颜色

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -13,6 +13,11 @@
   src: url('https://cdn.lvcshu.info/font/nei.woff');
 }
 
+::selection {
+  color: #333;
+  background: rgba(66, 185, 131, 0.45);
+}
+
 :root {
   --text: #333;
 }
