update :: 调整字体 :: 文章显示逻辑bug修复

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -38,8 +38,8 @@ body {
 }
 
 .title {
-  font-family: 'nei', 'schnyder', Times, serif;
-  font-size: 40px;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft YaHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Helvetica Neue", Arial, sans-serif;
+  font-size: 2.2rem;
 }
 
 .home {
@@ -55,7 +55,7 @@ body {
 }
 
 .postlisttitle {
-  font-family: 'graphik', Times, serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft YaHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Helvetica Neue", Arial, sans-serif;
   font-size: 19px;
   line-height: 33px;
   font-weight: 400;
@@ -76,7 +76,7 @@ body {
 }
 
 html {
-  font-family: "SF Pro Display", PingFangSC-Thin, graphik, PingFang-SC-W3, "Segoe UI", Roboto, "Microsoft YaHei UI", "Source Han Sans SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft YaHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Helvetica Neue", Arial, sans-serif;
   height: 100%;
 }
 
@@ -186,7 +186,7 @@ div.lefttab > hr {
 }
 
 .postcontext p {
-  font-size: 20px;
+  font-size: 16px;
   line-height: 36px;
   font-weight: 300;
   margin: 20px 0;
@@ -194,9 +194,9 @@ div.lefttab > hr {
 
 .postcontext h2 {
   line-height: 38px;
-  font-size: 30px;
+  font-size: 4.2rem;
   font-weight: 400;
-  font-family: 'graphik', Times, serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft YaHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Helvetica Neue", Arial, sans-serif;
 }
 
 .loading {
