update :: 调整字体 :: 文章显示逻辑修改

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: 'FZJL';
-  src: url('https://cdn.lvcshu.info/font/FZJL.ttf');
-}
-
-@font-face {
-  font-family: 'graphik';
-  src: url('https://cdn.lvcshu.info/font/graphik-normal-300.woff2')
-}
-
-@font-face {
-  font-family: 'nei';
-  src: url('https://cdn.lvcshu.info/font/nei.woff');
-}
-
 ::selection {
   color: #333;
   background: rgba(66, 185, 131, 0.45);
@@ -194,9 +179,19 @@ div.lefttab > hr {
 
 .postcontext h2 {
   line-height: 38px;
-  font-size: 4.2rem;
-  font-weight: 400;
+  font-size: 1.7rem;
+  font-weight: 700;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft YaHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Helvetica Neue", Arial, sans-serif;
+}
+
+.postcontext h3 {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+
+.postcontext h4,h5,h6 {
+  font-size: 1rem;
 }
 
 .loading {
