--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -22,9 +22,13 @@ body {
   padding: 15px 20px;
 }
 
+.postbox {
+  padding-top: 35px;
+}
+
 .title {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft YaHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Helvetica Neue", Arial, sans-serif;
-  font-size: 2.2rem;
+  font-size: 1.75rem;
 }
 
 .home {
@@ -213,6 +217,10 @@ div.lefttab > hr {
 @media screen and (max-width: 1000px) {
   #main {
     width: 100% !important;
+  }
+
+  .postbox {
+    padding-top: 0px;
   }
 
   .postdate {
