fix ::  更新列表下方样式

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -136,6 +136,10 @@ div.lefttab > hr {
   background-color: rgba(0, 0, 0, 0);
 }
 
+div#list {
+  padding-bottom: 25px;
+}
+
 .select {
   border-bottom: solid;
   border-color: #42b983 !important;
@@ -194,7 +198,7 @@ div.lefttab > hr {
 }
 
 
-.postcontext h4,h5,h6 {
+.postcontext h4, h5, h6 {
   font-size: 1rem;
 }
 
