--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -164,6 +164,16 @@ div#list {
   border-color: rgba(0, 0, 0, 0);
 }
 
+.tab *{
+  moz-user-select: -moz-none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .postcontext {
   text-align: initial;
   padding: 30px;
