update :: 添加动画效果

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -164,7 +164,7 @@ div#list {
   border-color: rgba(0, 0, 0, 0);
 }
 
-.tab *{
+.tab * {
   moz-user-select: -moz-none;
   -moz-user-select: none;
   -o-user-select: none;
@@ -323,4 +323,8 @@ div#list {
 
 .readbtn {
   margin: 5px;
+}
+
+.flip-list-move {
+  transition: transform 0.2s;
 }
