update :: 美化滚动条

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -328,3 +328,23 @@ div#list {
 .flip-list-move {
   transition: transform 0.2s;
 }
+
+/* Scrollbar Author:SukkaW */
+
+/* From:https://github.com/SukkaW/hexo-theme-suka/blob/6af736cbd75174baf9519017ce3e7bb9bb8d70d8/src/css/style.css */
+
+html *::-webkit-scrollbar {
+  width: 6px;
+  height: 4px;
+  background: transparent;
+
+}
+
+@media (min-width: 1024px) {
+  html *::-webkit-scrollbar {
+    width: 8px;
+    height: 6px;
+  }
+}
+
+/* Scrollbar CSS end */
