--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -110,9 +110,10 @@ div.lefttab > hr {
   padding: 5px;
   padding-left: 15px !important;
   transition: 0.08s;
-  border-bottom: solid;
-  border-color: rgba(0, 0, 0, .05);
+  //border-bottom: dotted;
+  border-color: rgba(0, 0, 0, .2);
   border-bottom-width: thin;
+  border-bottom-style: dashed;
 }
 
 .post:hover {
