--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -228,8 +228,8 @@ div#list {
 .postdate {
   font-size: small;
   color: rgba(0, 0, 0, .7);
-  float: right;
-  margin: 5px
+  margin: 5px;
+  white-space:nowrap;
 }
 
 @media screen and (max-width: 1000px) {
@@ -300,10 +300,10 @@ div#list {
     background-color: #42b983;
   }
 
-  .readbtn {
+  /*.readbtn {
     position: absolute;
     right: 5px;
-  }
+  }*/
 }
 
 @media screen and (min-width: 1200px) {
