update :: 调整页面布局

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -278,14 +278,14 @@ div#list {
   .lefttab {
     margin: 0px !important;
     position: initial !important;
-    padding: 15px;
+    padding-top: 15px;
     width: 50%;
     z-index: 9999 !important;
   }
 
   .righttab {
     margin: 0px !important;
-    padding: 15px;
+    padding-top: 15px;
     position: initial !important;
     width: 50%;
     z-index: 9999 !important;
