update :: 调整页面布局

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -280,6 +280,7 @@ div#list {
     position: initial !important;
     padding-top: 15px;
     width: 50%;
+    height: 50px;
     z-index: 9999 !important;
   }
 
@@ -288,6 +289,7 @@ div#list {
     padding-top: 15px;
     position: initial !important;
     width: 50%;
+    height: 50px;
     z-index: 9999 !important;
   }
 
