fix :: 修复选中高亮

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -1,5 +1,5 @@
 ::selection {
-  color: #333;
+  color: rgb(185, 66, 66);
   background: rgba(66, 185, 131, 0.45);
 }
 
@@ -145,7 +145,7 @@ div#list {
 }
 
 .select {
-  border-bottom: solid;
+  border-bottom: solid !important;
   border-color: #42b983 !important;
 }
 
