--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -14,6 +14,7 @@
 }
 
 body {
+  width: 100% !important;
   color: var(--color-text);
 }
 
@@ -179,7 +180,6 @@ div#list {
 
 .postcontext {
   text-align: initial;
-  padding: 30px;
 }
 
 .postcontext * {
@@ -229,7 +229,7 @@ div#list {
   font-size: small;
   color: rgba(0, 0, 0, .7);
   margin: 5px;
-  white-space:nowrap;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 1700px) {
@@ -354,3 +354,20 @@ html *::-webkit-scrollbar-thumb {
 }
 
 /* Scrollbar CSS end */
+
+.setting > .row:hover {
+  transition: 0.08s;
+  background: rgba(0, 0, 0, .08);
+  border-left: solid;
+  border-bottom-width: 1.5px;
+}
+
+.setting > .row {
+  border-color: rgba(0, 0, 0, 0.2);
+  border-bottom-width: thin;
+  border-bottom-style: dashed;
+}
+
+.setting * {
+  margin: 5px;
+}
